--- a/src/CafeDevCode.Website/Views/Post/DetailPortal.cshtml
+++ b/src/CafeDevCode.Website/Views/Post/DetailPortal.cshtml
@@ -1,43 +1,24 @@
-﻿<!-- Page Content -->
-<!-- Banner Starts Here -->
-<div class="heading-page header-text">
-    <section class="page-heading">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="text-content">
-                        <h4>Post Details</h4>
-                        <h2>Single blog post</h2>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
+﻿@using CafeDevCode.Logic.Shared.Configs
+@using CafeDevCode.Logic.Shared.Models
+@using Microsoft.Extensions.Options
+@model PostDetailModel
+@inject IOptions<SiteConfig> siteConfig
+
+@section Header {
+    @{
+        var headerModel = new HeaderMetaViewModel();
+        var url = $"{siteConfig.Value.HttpsUrl}{Model.UrlMeta}-{Model.Id}.html";
+        headerModel.SetData(Model.Title, Model.Keywords, Model.Description, Model.Image, url);
+        @await Html.PartialAsync("~/Views/Partial/HeaderMeta.cshtml", headerModel);
+    }
+}
+
+
+<div class="heading-page header-text p-0 pt-3">
+    
 </div>
 
 <!-- Banner Ends Here -->
-
-<section class="call-to-action">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-12">
-                <div class="main-content">
-                    <div class="row">
-                        <div class="col-lg-8">
-                            <span>Stand Blog HTML5 Template</span>
-                            <h4>Creative HTML Template For Bloggers!</h4>
-                        </div>
-                        <div class="col-lg-4">
-                            <div class="main-button">
-                                <a rel="nofollow" href="https://templatemo.com/tm-551-stand-blog" target="_parent">Download Now!</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
 
 
 <section class="blog-posts grid-system">
@@ -49,27 +30,31 @@
                         <div class="col-lg-12">
                             <div class="blog-post">
                                 <div class="blog-thumb">
-                                    <img src="assets/images/blog-post-02.jpg" alt="">
+                                    <img src="@($"{siteConfig.Value.HttpsUrl}{Model.Image}")" alt="">
                                 </div>
                                 <div class="down-content">
-                                    <span>Lifestyle</span>
-                                    <a href="post-details.html"><h4>Aenean pulvinar gravida sem nec</h4></a>
+                                    <a href="@($"{siteConfig.Value.HttpsUrl}{Model.UrlMeta}-{Model.Id}.html")"><h4>@Model.Title</h4></a>
                                     <ul class="post-info">
-                                        <li><a href="#">Admin</a></li>
-                                        <li><a href="#">May 12, 2020</a></li>
-                                        <li><a href="#">10 Comments</a></li>
+                                        <li><a href="#">@Model.Author?.ShortName</a></li>
+                                        <li><a href="#">@Model.PostDate?.ToString("yyyy, MMM, dd")</a></li>
+                                        <li><a href="#">@Model.TotalComment Bình luận</a></li>
                                     </ul>
-                                    <p>
-                                        You can browse different tags such as <a rel="nofollow" href="https://templatemo.com/tag/multi-page" target="_parent">multi-page</a>, <a rel="nofollow" href="https://templatemo.com/tag/resume" target="_parent">resume</a>, <a rel="nofollow" href="https://templatemo.com/tag/video" target="_parent">video</a>, etc. to see more CSS templates. Sed hendrerit rutrum arcu, non malesuada nisi. Sed id facilisis turpis. Donec justo elit, dapibus vel ultricies in, molestie sit amet risus. In nunc augue, rhoncus sed libero et, tincidunt tempor nisl. Donec egestas, quam eu rutrum ultrices, sapien ante posuere nisl, ac eleifend eros orci vel ante. Pellentesque vitae eleifend velit. Etiam blandit felis sollicitudin vestibulum feugiat.
-                                        <br><br>Donec tincidunt leo nec magna gravida varius. Suspendisse felis orci, egestas ac sodales quis, venenatis et neque. Vivamus facilisis dignissim arcu et blandit. Maecenas finibus dui non pulvinar lacinia. Ut lacinia finibus lorem vel porttitor. Suspendisse et metus nec libero ultrices varius eget in risus. Cras id nibh at erat pulvinar malesuada et non ipsum. Suspendisse id ipsum leo.
-                                    </p>
+                                    @Html.Raw(Model.Content)
                                     <div class="post-options">
                                         <div class="row">
                                             <div class="col-6">
                                                 <ul class="post-tags">
                                                     <li><i class="fa fa-tags"></i></li>
-                                                    <li><a href="#">Best Templates</a>,</li>
-                                                    <li><a href="#">TemplateMo</a></li>
+                                                    @foreach(var tag in Model.Tags) 
+                                                    {
+                                                        if(tag != Model.Tags.Last()) {
+                                                            <li><a href="@($"{siteConfig.Value?.HttpsUrl}tag/{tag.UrlMeta}-{tag.Id}.html")">@tag.Title</a>,</li>
+                                                        }
+                                                        else {
+                                                            <li><a href="@($"{siteConfig.Value?.HttpsUrl}tag/{tag.UrlMeta}-{tag.Id}.html")">@tag.Title</a></li>
+                                                        }
+                                                    }
+                                                    
                                                 </ul>
                                             </div>
                                             <div class="col-6">
@@ -87,7 +72,7 @@
                         <div class="col-lg-12">
                             <div class="sidebar-item comments">
                                 <div class="sidebar-heading">
-                                    <h2>4 comments</h2>
+                                    <h2>@Model.TotalComment bình luận</h2>
                                 </div>
                                 <div class="content">
                                     <ul>
@@ -134,7 +119,7 @@
                         <div class="col-lg-12">
                             <div class="sidebar-item submit-comment">
                                 <div class="sidebar-heading">
-                                    <h2>Your comment</h2>
+                                    <h2>Bình luận</h2>
                                 </div>
                                 <div class="content">
                                     <form id="comment" action="#" method="post">
@@ -173,81 +158,7 @@
                 </div>
             </div>
             <div class="col-lg-4">
-                <div class="sidebar">
-                    <div class="row">
-                        <div class="col-lg-12">
-                            <div class="sidebar-item search">
-                                <form id="search_form" name="gs" method="GET" action="#">
-                                    <input type="text" name="q" class="searchText" placeholder="type to search..." autocomplete="on">
-                                </form>
-                            </div>
-                        </div>
-                        <div class="col-lg-12">
-                            <div class="sidebar-item recent-posts">
-                                <div class="sidebar-heading">
-                                    <h2>Recent Posts</h2>
-                                </div>
-                                <div class="content">
-                                    <ul>
-                                        <li>
-                                            <a href="post-details.html">
-                                                <h5>Vestibulum id turpis porttitor sapien facilisis scelerisque</h5>
-                                                <span>May 31, 2020</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="post-details.html">
-                                                <h5>Suspendisse et metus nec libero ultrices varius eget in risus</h5>
-                                                <span>May 28, 2020</span>
-                                            </a>
-                                        </li>
-                                        <li>
-                                            <a href="post-details.html">
-                                                <h5>Swag hella echo park leggings, shaman cornhole ethical coloring</h5>
-                                                <span>May 14, 2020</span>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-12">
-                            <div class="sidebar-item categories">
-                                <div class="sidebar-heading">
-                                    <h2>Categories</h2>
-                                </div>
-                                <div class="content">
-                                    <ul>
-                                        <li><a href="#">- Nature Lifestyle</a></li>
-                                        <li><a href="#">- Awesome Layouts</a></li>
-                                        <li><a href="#">- Creative Ideas</a></li>
-                                        <li><a href="#">- Responsive Templates</a></li>
-                                        <li><a href="#">- HTML5 / CSS3 Templates</a></li>
-                                        <li><a href="#">- Creative &amp; Unique</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-12">
-                            <div class="sidebar-item tags">
-                                <div class="sidebar-heading">
-                                    <h2>Tag Clouds</h2>
-                                </div>
-                                <div class="content">
-                                    <ul>
-                                        <li><a href="#">Lifestyle</a></li>
-                                        <li><a href="#">Creative</a></li>
-                                        <li><a href="#">HTML5</a></li>
-                                        <li><a href="#">Inspiration</a></li>
-                                        <li><a href="#">Motivation</a></li>
-                                        <li><a href="#">PSD</a></li>
-                                        <li><a href="#">Responsive</a></li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                @await Html.PartialAsync("~/Views/Partial/PortalMenuLeft.cshtml")
             </div>
         </div>
     </div>
