--- a/src/CafeDevCode.Website/Views/Partial/PortalMenuLeft.cshtml
+++ b/src/CafeDevCode.Website/Views/Partial/PortalMenuLeft.cshtml
@@ -77,5 +77,15 @@
                 </div>
             </div>
         </div>
+        <div class="col-lg-12">
+            <div class="sidebar-item tags">
+                <div class="sidebar-heading">
+                    <h2>FANPAGE</h2>
+                </div>
+                <div class="content d-flex justify-content-center">
+                    <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FCafe-Dev-Code-109383861865296&tabs=timeline&width=340&height=500&small_header=false&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="340" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
