--- a/src/CafeDevCode.Website/Views/Home/About.cshtml
+++ b/src/CafeDevCode.Website/Views/Home/About.cshtml
@@ -1,90 +1,53 @@
 ﻿<!-- Page Content -->
 <!-- Banner Starts Here -->
 <div class="heading-page header-text">
-    <section class="page-heading">
+    <section class="page-heading m-0">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
                     <div class="text-content">
-                        <h4>about us</h4>
-                        <h2>more about us!</h2>
+                        <h4>Giới thiệu</h4>
+                        <h2>Về Cafe Dev Code!</h2>
                     </div>
                 </div>
             </div>
         </div>
     </section>
 </div>
-
 <!-- Banner Ends Here -->
-
-
-<section class="about-us">
+<section class="mt-3">
     <div class="container">
-
         <div class="row">
-            <div class="col-lg-12">
-                <img src="assets/images/about-us.jpg" alt="">
-                <p>Please tell your friends about TemplateMo website. Thank you. You can browse through different categories of templates such as <a rel="nofollow" href="https://templatemo.com/tag/business" target="_parent">business</a>, <a rel="nofollow" href="https://templatemo.com/tag/portfolio" target="_parent">portfolio</a>, <a rel="nofollow" href="https://templatemo.com/tag/restaurant" target="_parent">restaurant</a>, etc. Pellentesque quis luctus libero. Maecenas pretium molestie erat, ac tincidunt leo gravida ac. Cras ullamcorper eu ipsum eu sollicitudin. Fusce vitae commodo turpis. Integer ullamcorper purus nec justo mollis fermentum. Nunc imperdiet erat nec lacinia laoreet. <br><br>Maecenas faucibus ullamcorper felis vitae finibus. Nullam at quam ut lacus aliquam tempor vel sed ipsum. Donec pellentesque tincidunt imperdiet. Mauris sit amet justo vulputate, cursus massa congue, vestibulum odio. Aenean elit nunc, gravida in erat sit amet, feugiat viverra leo. Phasellus interdum, diam commodo egestas rhoncus, turpis nisi consectetur nibh, in vehicula eros orci vel neque.</p>
-            </div>
+            <p style="font-size: 18px;">Chào độc giả, bao gồm những người bạn, những người mình quen biết hoặc chưa từng quen biết. Trước tiên, cho mình gửi lời cảm ơn chân thành nhất đến tất cả những độc giả ghé thăm “ngôi nhà” tinh thần này của mình.</p>
+            <h2 class="mt-2">Câu chuyện về tôi</h2>
+            <p class="mt-2" style="font-size: 18px;">Mình là Dương Nguyễn Tấn Hòa là tác giả của blog Cafe Dev Code và chủ kênh youtube Cafe Dev Code. Công việc hiện tại của mình là một lập trình viên ngoài ra với đam mê viết lách mình còn kiêm thêm vài công việc như content writer, youtuber và nhiều thứ khác nữa</p>
+            <p class="mt-2" style="font-size: 18px;">Trang blog này ra đời là hành trình học hỏi và tích lũy kinh nghiệm của mình trong công việc, học tập và trong cuộc sống. Như bạn biết đó kiến thức, triết lý là hai thứ vô cùng quan trọng trong hành trang trên đường phát triển bản thân. Nên với việc duy trì và ngày càng cải thiện hình ảnh lẫn chất lượng blog, mình hi vọng sẽ ngày càng hoàn thiện hơn bản thân mình.</p>
+            <h2 class="mt-2">Những mục tiêu hướng đến</h2>
+            <p class="mt-2" style="font-size: 18px;">Như đã đề cập ở trên blog "Cafe Dev Code" là nơi mình chia sẽ những kiến thức, chém gió và bàn luận về các trải nghiệm của mình trong cuộc sống, tuy là nói vậy thôi nhưng nó cũng cần có những mục tiêu cụ thể</p>
+            <ul style="list-style: circle" class="ms-4 mt-2">
+                <li style="color: #f48840;"><a style="color: #f48840; font-size: 18px;" href="#">Đọc và dịch sách để không phải là "loser"</a></li>
+                <li style="color: #f48840;"><a style="color: #f48840; font-size: 18px;" href="#">Phát triển blog để phát triển bản thân</a></li>
+                <li style="color: #f48840;"><a style="color: #f48840; font-size: 18px;" href="#">Trao đi "yêu thương" để nhận lại "yêu thương" để rồi lan tỏa yêu thương đến mọi người (chia sẻ và học hỏi)</a></li>
+                <li style="color: #f48840;"><a style="color: #f48840; font-size: 18px;" href="#">Kiếm chút "xiền" đi cà phê vì sở thích của mình là cà phê</a></li>
+            </ul>
         </div>
-
         <div class="row">
-            <div class="col-lg-6">
-                <h4>Two-One Donec porttitor augue</h4>
-                <p>Quisque bibendum cursus viverra. Mauris at ex ipsum. Aenean condimentum urna nisl, eget interdum ante euismod vel. Aliquam at metus sit amet nunc dapibus posuere.</p>
+            <h2 class="mt-2">Tôi là ai?</h2>
+            <p class="mt-2 mb-2" style="font-size: 18px;">Vào đề đã lâu, bây giờ vào phần chính nhé, đó là vài câu giới thiệu về bản thân mình</p>
+            <div class="col-md-6 d-flex justify-content-center">
+                <img style="width: 250px; height: 250px; border-radius: 50%; border: solid 1px #f48840;" src="~/image/avatar-1.jpg" />
             </div>
-            <div class="col-lg-6">
-                <h4>Two-Two Donec porttitor augue</h4>
-                <p>Maecenas et metus nisl. Morbi ac interdum metus. Aliquam erat volutpat. Donec posuere tortor vel volutpat consequat. Mauris sagittis magna vel tellus semper interdum et id sapien.</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-4 col-md-6">
-                <h4>1-03 Donec porttitor augue</h4>
-                <p>Quisque bibendum cursus viverra. Mauris at ex ipsum. Aenean condimentum urna nisl, eget interdum ante euismod vel. Aliquam at metus sit amet nunc dapibus posuere.</p>
-            </div>
-            <div class="col-lg-4 col-md-6">
-                <h4>2-03 Donec porttitor augue</h4>
-                <p>Maecenas et metus nisl. Morbi ac interdum metus. Aliquam erat volutpat. Donec posuere tortor vel volutpat consequat. Mauris sagittis magna vel tellus semper interdum et id sapien.</p>
-            </div>
-            <div class="col-lg-4">
-                <h4>3-03 Donec porttitor augue</h4>
-                <p>Maecenas et metus nisl. Morbi ac interdum metus. Aliquam erat volutpat. Donec posuere tortor vel volutpat consequat. Mauris sagittis magna vel tellus semper interdum et id sapien.</p>
-            </div>
-        </div>
-
-
-        <div class="row">
-            <div class="col-lg-3 col-md-6">
-                <h4>01 Four Columns</h4>
-                <p>Mauris at ex ipsum. Aenean condimentum urna nisl, eget interdum ante euismod vel. Aliquam at metus sit amet nunc dapibus posuere.</p>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <h4>02 Four Columns</h4>
-                <p>Aliquam erat volutpat. Donec posuere tortor vel volutpat consequat. Mauris sagittis magna vel tellus semper interdum et id sapien.</p>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <h4>03 Four Columns</h4>
-                <p>Morbi ac interdum metus. Donec posuere tortor vel volutpat consequat. Mauris sagittis magna vel tellus semper interdum et id sapien.</p>
-            </div>
-            <div class="col-lg-3 col-md-6">
-                <h4>04 Four Columns</h4>
-                <p>Aliquam erat volutpat. Donec posuere tortor vel volutpat consequat. Mauris sagittis magna vel tellus semper interdum et id sapien.</p>
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="col-lg-12">
-                <ul class="social-icons">
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+            <div class="col-md-6">
+                <h4>Những sự thật về tôi</h4>
+                <ul style="list-style: circle" class="ms-4 mt-2">
+                    <li style="color: #f48840;"><p style="font-size: 18px;">Họ và tên: Dương Nguyễn Tấn Hòa</p></li>
+                    <li style="color: #f48840;"><p style="font-size: 18px;">Năm sinh: 1997</p></li>
+                    <li style="color: #f48840;"><p style="font-size: 18px;">Tốt nghiệp Đại học Bách Khoa Thành Phố Hồ Minh năm 2019 chuyên ngành Điện tử - Viễn thông</p></li>
+                    <li style="color: #f48840;"><p style="font-size: 18px;">Quên quán: huyện Bến Lức, tỉnh Long An. Thường trú: TP.Hồ Chí Minh</p></li>
+                    <li style="color: #f48840;"><p style="font-size: 18px;">Tính cách: hướng nội, trầm lắng</p></li>
+                    <li style="color: #f48840;"><p style="font-size: 18px;">Sở thích: Nghe nhạc, đọc sách và "nghiện" cà phê</p></li>
                 </ul>
             </div>
         </div>
-
-
     </div>
 </section>
