--- a/src/CafeDevCode.Website/Views/Partial/TopNavigation.cshtml
+++ b/src/CafeDevCode.Website/Views/Partial/TopNavigation.cshtml
@@ -1,15 +1,15 @@
 ﻿@using System.Security.Claims
+@using CafeDevCode.Logic.Shared.Configs
+@using Microsoft.Extensions.Options
 @inject IHttpContextAccessor httpContextAccessor
+@inject IOptions<SiteConfig> siteConfig
 
 <ul class="navbar-nav ml-auto">
     <li class="nav-item active">
-        <a class="nav-link" href="index.html">Trang chủ</a>
+        <a class="nav-link" href="@siteConfig.Value.HttpsUrl">Trang chủ</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" asp-action="About" asp-controller="Home">Về Blog</a>
-    </li>
-    <li class="nav-item">
-        <a class="nav-link" asp-action="IndexPortal" asp-controller="Post">Bài viết</a>
+        <a class="nav-link" href="@($"{siteConfig.Value.HttpsUrl}gioi-thieu.html")">Về Blog</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" asp-action="IndexPortal" asp-controller="Video">Video</a>
@@ -20,18 +20,17 @@
     @if (!string.IsNullOrEmpty(httpContextAccessor.HttpContext?.User?.FindFirst(ClaimTypes.Name)?.Value))
     {
         <li class="nav-item">
-            @{
-                var userName = @httpContextAccessor.HttpContext?.User?.FindFirst(ClaimTypes.Name)?.Value;
-                <a class="nav-link" asp-action="DetailPortal" asp-controller="User" asp-route-userName="@userName">@userName</a>
-
-            }
+        @{
+            var userName = @httpContextAccessor.HttpContext?.User?.FindFirst(ClaimTypes.Name)?.Value;
+            <a class="nav-link" asp-action="DetailPortal" asp-controller="User" asp-route-userName="@userName">@userName</a>
+        }
         </li>
     }
     else
     {
         <li class="nav-item">
-                <a class="nav-link" asp-action="LoginPortal" asp-controller="User">Đăng nhập</a>
-         </li>
+            <a class="nav-link" asp-action="LoginPortal" asp-controller="User">Đăng nhập</a>
+        </li>
     }
    
 </ul>
