--- a/src/CafeDevCode.Website/Views/Post/DetailPortal.cshtml
+++ b/src/CafeDevCode.Website/Views/Post/DetailPortal.cshtml
@@ -60,8 +60,13 @@
                                             <div class="col-6">
                                                 <ul class="post-share">
                                                     <li><i class="fa fa-share-alt"></i></li>
-                                                    <li><a href="#">Facebook</a>,</li>
-                                                    <li><a href="#"> Twitter</a></li>
+                                                    @{
+                                                        var postUrl = $"{siteConfig.Value.HttpsUrl}{Model.UrlMeta}-{Model.Id}.html";
+                                                        var facebookShare = "http://www.facebook.com/sharer/sharer.php?u=" + postUrl;
+                                                        var twitterShare = "http://twitter.com/share?url=" + postUrl;
+                                                        <li><a href="@facebookShare">Facebook</a>,</li>
+                                                        <li><a href="@twitterShare"> Twitter</a></li>
+                                                    }
                                                 </ul>
                                             </div>
                                         </div>
