--- a/src/CafeDevCode.Website/Views/Shared/_Layout.cshtml
+++ b/src/CafeDevCode.Website/Views/Shared/_Layout.cshtml
@@ -31,8 +31,8 @@
     <header class="">
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand d-flex align-items-center justify-content-center" href="index.html">
-                    <img src="~/image/logo.png" height="50" width="50"/>
+                <a class="navbar-brand d-flex align-items-center justify-content-center" href="@($"{siteConfig.Value.HttpsUrl}")">
+                    <img src="@($"{siteConfig.Value.HttpsUrl}image/logo.png")" height="50" width="50" />
                     <h2 class="ms-2">Cafe Dev Code<em>.</em></h2>
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -47,18 +47,9 @@
 
     @RenderBody()
 
-    <footer>
+    <footer class="py-3">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <ul class="social-icons">
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Twitter</a></li>
-                        <li><a href="#">Behance</a></li>
-                        <li><a href="#">Linkedin</a></li>
-                        <li><a href="#">Dribbble</a></li>
-                    </ul>
-                </div>
                 <div class="col-lg-12">
                     <div class="copyright-text">
                         <p>
