--- a/src/CafeDevCode.Website/Views/Post/DetailPortal.cshtml
+++ b/src/CafeDevCode.Website/Views/Post/DetailPortal.cshtml
@@ -9,7 +9,7 @@
         var headerModel = new HeaderMetaViewModel();
         var url = $"{siteConfig.Value.HttpsUrl}{Model.UrlMeta}-{Model.Id}.html";
         headerModel.SetData(Model.Title, Model.Keywords, Model.Description, Model.Image, url);
-        @await Html.PartialAsync("~/Views/Partial/HeaderMeta.cshtml", headerModel);
+    @await Html.PartialAsync("~/Views/Partial/HeaderMeta.cshtml", headerModel);
     }
 }
 
@@ -63,8 +63,8 @@
                                                         var postUrl = $"{siteConfig.Value.HttpsUrl}{Model.UrlMeta}-{Model.Id}.html";
                                                         var facebookShare = "http://www.facebook.com/sharer/sharer.php?u=" + postUrl;
                                                         var twitterShare = "http://twitter.com/share?url=" + postUrl;
-                                                        <li><a href="@facebookShare">Facebook</a>,</li>
-                                                        <li><a href="@twitterShare"> Twitter</a></li>
+                                                            <li><a href="@facebookShare">Facebook</a>,</li>
+                                                            <li><a href="@twitterShare"> Twitter</a></li>
                                                     }
                                                 </ul>
                                             </div>
@@ -85,8 +85,52 @@
                         </div>
                         <div class="col-lg-12">
                             <div class="sidebar-item submit-comment">
-                                <div class="sidebar-heading">
+                                <div class="sidebar-heading mb-3">
                                     <h2>Bình luận</h2>
+                                    <ul>
+                                        <li>
+                                            <div class ="d-flex justify-content-around">
+                                                <div>
+                                                    <img src="assets/images/comment-author-01.jpg" alt="">
+                                                </div>
+                                                <div class="right-content ms-2">
+                                                    <h5>Charles Kate<span>May 16, 2020</span></h5>
+                                                    <p style="font-size: 14px;">Fusce ornare mollis eros. Duis et diam vitae justo fringilla condimentum eu quis leo. Vestibulum id turpis porttitor sapien facilisis scelerisque. Curabitur a nisl eu lacus convallis eleifend posuere id tellus.</p>
+                                                    <a href="#" style="font-size: 14px; color: #f48840;">Trả lời</a>
+                                                </div>
+                                            </div>
+                                            <hr class="my-3"/>
+                                            <ul class="ms-3">
+                                                <li>
+                                                    <div class="d-flex justify-content-around">
+                                                        <div>
+                                                            <img src="assets/images/comment-author-01.jpg" alt="">
+                                                        </div>
+                                                        <div class="right-content ms-2">
+                                                            <h5>Charles Kate<span>May 16, 2020</span></h5>
+                                                            <p style="font-size: 14px;">Fusce ornare mollis eros. Duis et diam vitae justo fringilla condimentum eu quis leo. Vestibulum id turpis porttitor sapien facilisis scelerisque. Curabitur a nisl eu lacus convallis eleifend posuere id tellus.</p>
+                                                            <a href="#" style="font-size: 14px; color: #f48840;">Trả lời</a>
+                                                        </div>
+                                                    </div>
+                                                    <hr class="my-3" />
+                                                    <ul class="ms-3">
+                                                        <li>
+                                                            <div class="d-flex justify-content-around">
+                                                                <div>
+                                                                    <img src="assets/images/comment-author-01.jpg" alt="">
+                                                                </div>
+                                                                <div class="right-content ms-2">
+                                                                    <h5>Charles Kate<span>May 16, 2020</span></h5>
+                                                                    <p style="font-size: 14px;">Fusce ornare mollis eros. Duis et diam vitae justo fringilla condimentum eu quis leo. Vestibulum id turpis porttitor sapien facilisis scelerisque. Curabitur a nisl eu lacus convallis eleifend posuere id tellus.</p>
+                                                                    <a href="#" style="font-size: 14px; color: #f48840;">Trả lời</a>
+                                                                </div>
+                                                            </div>
+                                                        </li>
+                                                    </ul>
+                                                </li>
+                                            </ul>
+                                        </li>
+                                    </ul>
                                 </div>
                                 <div class="content">
                                     <form id="comment" action="#" method="post">
