--- a/src/CafeDevCode.Website/Views/Comment/Tree.cshtml
+++ b/src/CafeDevCode.Website/Views/Comment/Tree.cshtml
@@ -1,19 +1,98 @@
-﻿@using CafeDevCode.Ultils.Model
+﻿@using CafeDevCode.Logic.Shared.Models
+@using CafeDevCode.Ultils.Model
 
-@model IEnumerable<TreeList<CommentViewModel>>
+@model CommentTreeViewModel
 
 if(Model != null &&
    Model.Any()) 
 {
-    <ul>
-        @foreach (var item in Model)
-        {
-            
-        }
-    </ul>
+    @{
+        var className = Model.IsRoot == true ? "" : "ms-3";
+
+        <ul class="@className">
+            @foreach (var item in Model.Collection)
+            {
+                if (item.Childrens != null &&
+                    item.Childrens.Any())
+                {
+                    <li>
+                        <div class="d-flex justify-content-around">
+                            <div>
+                                <img src="assets/images/comment-author-01.jpg" alt="">
+                            </div>
+                            <div class="right-content ms-2">
+                                <h5>@item.Node?.CreatedBy<span>@item.Node?.CreatedAt</span></h5>
+                                <p style="font-size: 14px;">Fusce ornare mollis eros. Duis et diam vitae justo fringilla condimentum eu quis leo. Vestibulum id turpis porttitor sapien facilisis scelerisque. Curabitur a nisl eu lacus convallis eleifend posuere id tellus.</p>
+                                <a href="#" style="font-size: 14px; color: #f48840;">Trả lời</a>
+                            </div>
+                        </div>
+                        @await Html.PartialAsync("~/Views/Comment/Tree.cshtml", new CommentTreeViewModel() { IsRoot = false, Collection = item.Childrens })
+                    </li>
+                }
+                else
+                {
+                    <li>
+                        <div class="d-flex justify-content-around">
+                            <div>
+                                <img src="assets/images/comment-author-01.jpg" alt="">
+                            </div>
+                            <div class="right-content ms-2">
+                                <h5>@item.Node?.CreatedBy<span>@item.Node?.CreatedAt</span></h5>
+                                <p style="font-size: 14px;">@item.Node?.Content</p>
+                                <a href="#" style="font-size: 14px; color: #f48840;">Trả lời</a>
+                            </div>
+                        </div>
+                    </li>
+                }
+            }
+        </ul>
+    }
 }
 else
 {
 
 }
-
+<ul>
+    <li>
+        <div class="d-flex justify-content-around">
+            <div>
+                <img src="assets/images/comment-author-01.jpg" alt="">
+            </div>
+            <div class="right-content ms-2">
+                <h5>Charles Kate<span>May 16, 2020</span></h5>
+                <p style="font-size: 14px;">Fusce ornare mollis eros. Duis et diam vitae justo fringilla condimentum eu quis leo. Vestibulum id turpis porttitor sapien facilisis scelerisque. Curabitur a nisl eu lacus convallis eleifend posuere id tellus.</p>
+                <a href="#" style="font-size: 14px; color: #f48840;">Trả lời</a>
+            </div>
+        </div>
+        <hr class="my-3" />
+        <ul class="ms-3">
+            <li>
+                <div class="d-flex justify-content-around">
+                    <div>
+                        <img src="assets/images/comment-author-01.jpg" alt="">
+                    </div>
+                    <div class="right-content ms-2">
+                        <h5>Charles Kate<span>May 16, 2020</span></h5>
+                        <p style="font-size: 14px;">Fusce ornare mollis eros. Duis et diam vitae justo fringilla condimentum eu quis leo. Vestibulum id turpis porttitor sapien facilisis scelerisque. Curabitur a nisl eu lacus convallis eleifend posuere id tellus.</p>
+                        <a href="#" style="font-size: 14px; color: #f48840;">Trả lời</a>
+                    </div>
+                </div>
+                <hr class="my-3" />
+                <ul class="ms-3">
+                    <li>
+                        <div class="d-flex justify-content-around">
+                            <div>
+                                <img src="assets/images/comment-author-01.jpg" alt="">
+                            </div>
+                            <div class="right-content ms-2">
+                                <h5>Charles Kate<span>May 16, 2020</span></h5>
+                                <p style="font-size: 14px;">Fusce ornare mollis eros. Duis et diam vitae justo fringilla condimentum eu quis leo. Vestibulum id turpis porttitor sapien facilisis scelerisque. Curabitur a nisl eu lacus convallis eleifend posuere id tellus.</p>
+                                <a href="#" style="font-size: 14px; color: #f48840;">Trả lời</a>
+                            </div>
+                        </div>
+                    </li>
+                </ul>
+            </li>
+        </ul>
+    </li>
+</ul>
