--- a/src/CafeDevCode.Website/Views/Shared/_Layout.cshtml
+++ b/src/CafeDevCode.Website/Views/Shared/_Layout.cshtml
@@ -44,23 +44,13 @@
             </div>
         </nav>
     </header>
+    @await Html.PartialAsync("~/Views/Partial/PortalSocialLink.cshtml")
 
     @RenderBody()
 
-    <footer class="py-3">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="copyright-text">
-                        <p>
-                            Copyright 2022 Cafe Dev Code.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </footer>
+    @await Html.PartialAsync("~/Views/Partial/PortalFooter.cshtml")
 
+    <button class="btn" onclick="moveTopFunction()" id="moveTopButton" title="Đầu trang"><i class="fas fa-arrow-up"></i></button>
     
     <script src="@(siteConfig.Value.HttpsUrl + "assets/js/custom.js")"></script>
     <script src="@(siteConfig.Value.HttpsUrl + "assets/js/owl.js")"></script>
@@ -78,5 +68,14 @@
             }
         }
     </script>
+    <script>
+        var mybutton = document.getElementById("moveTopButton");
+        mybutton.style.display = "block";
+        moveTopFunction = () => {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+    </script>
+    
 </body>
 </html>
