--- a/src/CafeDevCode.Website/wwwroot/css/site.css
+++ b/src/CafeDevCode.Website/wwwroot/css/site.css
@@ -31,5 +31,24 @@ html {
   }
 }
 
+#moveTopButton {
+    position: fixed;
+    bottom: 70px;
+    right: 10px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #f48840;
+    color: white;
+    cursor: pointer;
+    padding: 12px 18px;
+    border-radius: 4px;
+}
+
+#moveTopButton:hover {
+    background-color: #555;
+}
+
 
 
