--- a/src/CafeDevCode.Website/Views/Shared/_Layout.cshtml
+++ b/src/CafeDevCode.Website/Views/Shared/_Layout.cshtml
@@ -46,7 +46,9 @@
     </header>
     @await Html.PartialAsync("~/Views/Partial/PortalSocialLink.cshtml")
 
-    @RenderBody()
+    <div style="margin-bottom: 80px;">
+        @RenderBody()
+    </div>
 
     @await Html.PartialAsync("~/Views/Partial/PortalFooter.cshtml")
 
