--- a/src/CafeDevCode.Website/wwwroot/assets/css/templatemo-stand-blog.css
+++ b/src/CafeDevCode.Website/wwwroot/assets/css/templatemo-stand-blog.css
@@ -569,7 +569,7 @@ ul.page-numbers li a:hover {
 }
 
 .blog-posts .comments ul li {
-	display: inline-block;
+	/*display: inline-block;*/
 	margin-bottom: 20px;
 	padding-bottom: 20px;
 	border-bottom: 1px solid #eee;
